...
                            }
                            Spacer()
                        }
                    }
                    .onDelete(perform: deleteDog)
                }
                .navigationTitle("Dogs")
                .toolbar {
                    ToolbarItem(placement: .navigationBarTrailing) {
                        NavigationLink(destination: AddDogProgressiveView(dog: $selectedDog)) {
                            Image(systemName: "plus")
                        }
                    }
...
